Remove extra api and update yaml file
