# openapi.yaml
@@ -37,151 +37,6 @@ paths:
           description: Forbidden
         '404':
           description: Not Found
-  /_ah/health:
-    get:
-      tags:
-        - work-order-controller
-      summary: healthCheck
-      operationId: healthCheckUsingGET
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: string
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-    head:
-      tags:
-        - work-order-controller
-      summary: healthCheck
-      operationId: healthCheckUsingHEAD
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: string
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    post:
-      tags:
-        - work-order-controller
-      summary: healthCheck
-      operationId: healthCheckUsingPOST
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: string
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-    put:
-      tags:
-        - work-order-controller
-      summary: healthCheck
-      operationId: healthCheckUsingPUT
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: string
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-    delete:
-      tags:
-        - work-order-controller
-      summary: healthCheck
-      operationId: healthCheckUsingDELETE
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: string
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    options:
-      tags:
-        - work-order-controller
-      summary: healthCheck
-      operationId: healthCheckUsingOPTIONS
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: string
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-    patch:
-      tags:
-        - work-order-controller
-      summary: healthCheck
-      operationId: healthCheckUsingPATCH
-      consumes:
-        - application/json
-      produces:
-        - '*/*'
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: string
-        '204':
-          description: No Content
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
   '/changeStatus/{id}':
     post:
       tags:
