# src/main/java/com/cts/ms/wo/controller/WorkOrderController.java
@@ -51,10 +51,10 @@ public class WorkOrderController {
         workOrderService.updateOrder(workOrder.getId());
         return ResponseEntity.status(HttpStatus.OK).body("OK");
     }
-
-    @RequestMapping("/_ah/health")
-    public ResponseEntity<String> healthCheck() {
-        return new ResponseEntity<>("Healthy", HttpStatus.OK);
-    }
+//
+//    @RequestMapping("/_ah/health")
+//    public ResponseEntity<String> healthCheck() {
+//        return new ResponseEntity<>("Healthy", HttpStatus.OK);
+//    }
 
 }
